tests/snapshots/test_runner__tests__compiler__typecheck__single_dispatch_2__single_dispatch_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo (_: String): String = "Hello"

let foo (): String = "World"

let main (): Int =
  let f = [ x ] [ x ] .foo;
  //               ^^^ Error: ambiguous symbol
  123

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/single_dispatch_2/single_dispatch_2.kk:6:24
  │
6 │   let f = [ x ] [ x ] .foo;
  │                        ^^^ Ambiguous Symbol
  │
  = Matching types:

      (String -> String)

      (() -> String)

    Put type annotation for disambiguation.
